Exopy Changelog
===============


0.2.0 - unreleased
------------------

- always evaluate formula even if they contain only alpha characters PR # 132
- fix unproperly unparented child task when removing a ComplexTask PR # 132
- identify duplicate measurements in the waiting queue PR # 130 (fvalmorra)


0.1.0 - 15-02-2018
------------------

- Project renaming : ecpy -> exopy due to a PyPI conflict
- rename measure package -> measurement (correct english is better)
- docs: improve documentation about debugging (#124)
- measurement: fix a bug causing unwanted forced stops (#122)
- measurement: fix all found bugs of execution editor (#110)
- measurement: fix all found bugs of database access editor (#110)
- measurement: remove measurement from the list of edited ones when loading (#110)
- measurement: fix bug when switching workspaces after loading a measurement (#110)
- measurement: fix reference leak of old measures (#110)
- widgets: more homogoneous behavior of drag and drop in the tree (#110)
- tasks: fix collections of instr dependencies of interfaces (#99)
- tasks: allow for no views for an interface (#97)
- utils: use surrogate escape on Python 2 when decoding formatted traceback (#100)
- add support for qt5 and python 3.6 (#96)
- testing: handle dialog block execution till handler called (#95)
- tasks: fix handling of instrument dependencies in interfaces (#88)
- app : allow dep_type to be absent when analysing (#87)
- tasks: fix linspace interface (#79)
- measurement: make sure loaded measurement is selected after loading (#85)
- tasks: fixes for the execution of task in parallel (#80)
- testing: provide a function to monkeypatch exit_error_gathering
- instruments: fix broken test
- testing: switch to pytest-catchlog
- instruments: fixes to settings edition (#74)
- measurement: fix issues with workspace switching. (#72)
- measurement: fix issue with enqueueing when switching workspaces
- utils: do not use repr on str in Python 2